--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -94,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: [3.6, 3.8, "3.10"]
     steps:
     - uses: actions/checkout@v2
       with:
@@ -133,7 +133,7 @@ jobs:
         flake8 --count --select=E9,F63,F7,F82 --show-source --statistics src examples tutorial
     - name: Run examples
       run: |
-        ( make -C examples transform )
+        ( make -j 2 -C examples transform > /dev/null )
         ( make -C examples notebook )
     - name: Run tutorials
       run: |
