--- a/examples/lfric/eg12/Makefile
+++ b/examples/lfric/eg12/Makefile
@@ -41,13 +41,11 @@ include ../../common.mk
 transform: extract extract_transformed find_kernel
 
 extract:
-	${PSYCLONE} -nodm -s ./extract_nodes.py ../code/gw_mixed_schur_preconditioner_alg_mod.x90 -oalg /dev/null -opsy /dev/null
-#${PSYCLONE} -s ./test.py ../code/gw_mixed_schur_preconditioner_alg_mod.x90
-#${PSYCLONE} -s ../eg11/async_script.py ../code/gw_mixed_schur_preconditioner_alg_mod.x90
+	${PSYCLONE} -nodm -s ./extract_nodes.py ../code/gw_mixed_schur_preconditioner_alg_mod.x90
 
 extract_transformed:
 	${PSYCLONE} -nodm -s ./extract_kernel_with_transformations.py \
-	  ../code/gw_mixed_schur_preconditioner_alg_mod.x90 -oalg /dev/null -opsy /dev/null
+  ../code/gw_mixed_schur_preconditioner_alg_mod.x90
 
 find_kernel:
 	PSYCLONE_CONFIG=${PSYCLONE_DIR}/config/psyclone.cfg ${PYTHON} find_kernel.py
