--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -124,8 +124,8 @@ jobs:
         # If you wish to install the version of fparser pointed to by the
         # submodule instead of the released version (from PyPI) then
         # uncomment the following line:
-        # pip install external/fparser
-        pip install .
+        pip install external/fparser
+        #pip install .
     - name: Lint with flake8
       run: |
         # Stop the build if there are Python syntax errors or undefined names.
