--- a/examples/psyad/lfric/tangent_linear_tweaked/Makefile
+++ b/examples/psyad/lfric/tangent_linear_tweaked/Makefile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # BSD 3-Clause License
 #
-# Copyright (c) 2021-2022, Science and Technology Facilities Council.
+# Copyright (c) 2022, Science and Technology Facilities Council.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -31,9 +31,36 @@
 # ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 # ------------------------------------------------------------------------------
-# Author: A. R. Porter, STFC Daresbury Lab
-# Modified by: R. W. Ford, STFC Daresbury Lab
+# Authors: R. W. Ford and A. R. Porter, STFC Daresbury Laboratory
 
-EXAMPLES=$(sort $(wildcard eg*)) lfric
+PSYROOT=../../../..
+include ${PSYROOT}/examples/common.mk
 
-include ../top_level.mk
+CONFIG_ENV = PSYCLONE_CONFIG=${PSYCLONE_DIR}/config/psyclone.cfg
+
+F90FLAGS += -ffree-line-length-none
+
+OUT_DIR ?= ../adjoint_partial
+ACTIVE_VAR_LIST ?= 
+TL_KERNEL_NAME ?=
+
+TL_KERNEL_FILE = ${TL_KERNEL_NAME}_mod_tweaked.F90
+ADJ_KERNEL_FILE = $(subst _tweaked,,$(addprefix adj_,$(subst tl_,,${TL_KERNEL_FILE})))
+
+GENERATED_FILES = ${OUT_DIR}/adj*.[fF]90
+
+single: ${ADJ_KERNEL_FILE}
+
+${ADJ_KERNEL_FILE}: ${TL_KERNEL_FILE}
+	$(PSYAD) -api dynamo0.3 $< -oad ${OUT_DIR}/$@ -a ${ACTIVE_VAR_LIST}
+
+transform:
+	make single -e TL_KERNEL_NAME=tl_kinetic_energy_gradient_kernel ACTIVE_VAR_LIST="r_u ru_e ke_at_quad res_dot_product mul2 u_at_quad u_e u"
+	make single -e TL_KERNEL_NAME=tl_moist_dyn_gas_kernel ACTIVE_VAR_LIST="moist_dyn_gas mr_v mr_v_at_dof"
+	make single -e TL_KERNEL_NAME=tl_project_eos_pressure_kernel ACTIVE_VAR_LIST="exner rho exner_e r_exner exner_at_quad rho_at_quad rho_e tmp2 theta theta_vd_e theta_vd_at_quad moist_dyn_gas"
+	make single -e TL_KERNEL_NAME=tl_vorticity_advection_kernel ACTIVE_VAR_LIST="r_u res_dot_product vorticity_term cross_product1 cross_product2 j_vorticity u_at_quad mul2 vorticity_at_quad wind vorticity"
+
+compile:
+	@echo No compilation supported.
+
+run: compile
