#1483 Add option to ignore line length since the driver does not yet wrap long lines appropriately.

--- a/examples/lfric/eg17/full_example_extract/Makefile
+++ b/examples/lfric/eg17/full_example_extract/Makefile
@@ -55,6 +55,7 @@ endif
 
 F90 ?= gfortran
 F90FLAGS ?= -Wall -g
+F90FLAGS += -ffree-line-length-none
 
 OBJ = main_psy.o main_alg.o testkern_w0_kernel_mod.o
 
