#1888 Update NEMO examples to use new NEMO OpenMP scripts

--- a/examples/nemo/eg1/Makefile
+++ b/examples/nemo/eg1/Makefile
@@ -38,8 +38,10 @@
 include ../../common.mk
 
 transform:
-	${PSYCLONE} -api nemo -s ./openmp_trans.py ../code/tra_adv.F90
-	${PSYCLONE} -api nemo -s ./openmp_gpu_trans.py ../code/tra_adv.F90
+	${PSYCLONE} -api nemo -s ./openmp_cpu_levels_trans.py ../code/tra_adv.F90
+	${PSYCLONE} -api nemo -s ./openmp_gpu_levels_trans.py ../code/tra_adv.F90
+	${PSYCLONE} -api nemo -s ../scripts/omp_cpu_trans.py ../code/tra_adv.F90
+	${PSYCLONE} -api nemo -s ../scripts/omp_gpu_trans.py ../code/tra_adv.F90
 
 compile: transform
 	@echo "No compilation supported for nemo/eg1"
