--- a/examples/nemo/eg2/Makefile
+++ b/examples/nemo/eg2/Makefile
@@ -43,6 +43,9 @@ transform: omp_levels
 
 omp_levels:
 	${PSYCLONE} -api "nemo" -s ./omp_levels_trans.py ../code/traldf_iso.F90
+	${PSYCLONE} -api nemo -s ../scripts/omp_cpu_trans.py ../code/traldf_iso.F90
+	${PSYCLONE} -api nemo -s ../scripts/omp_gpu_trans.py ../code/traldf_iso.F90
+
 
 compile: transform
 	@echo "No compilation supported for nemo/eg2"
