#1978 Use jinja for standalone exctraction to support 32 and 64 bit fields.

--- a/lib/extract/standalone/lfric/Makefile
+++ b/lib/extract/standalone/lfric/Makefile
@@ -80,6 +80,9 @@ $(INF_LIB):
 kernel_data_standalone.o:	extract_standalone_base.o
 extract_standalone_base.o:	psy_data_base.o
 
+kernel_data_standalone.f90: kernel_data_standalone.jinja Makefile
+	$(PROCESS) $(PROCESS_ARGS) $< > kernel_data_standalone.f90
+
 psy_data_base.f90: $(PSYDATA_LIB_DIR)/psy_data_base.jinja Makefile
 	$(PROCESS) $(PROCESS_ARGS) -generic-declare $< > psy_data_base.f90
 
