#1978 Use jinja for nan testing to support 32 and 64 bit fields.

--- a/lib/nan_test/lfric/Makefile
+++ b/lib/nan_test/lfric/Makefile
@@ -99,6 +99,9 @@ nan_test_base.o: psy_data_base.o
 %.o: %.f90
 	$(F90) $(F90FLAGS) -c $<
 
+nan_test.f90: nan_test.jinja Makefile
+	$(PROCESS) $(PROCESS_ARGS) $< > nan_test.f90
+
 # The LFRic NaN checking library is built on the PSyData base library
 # and the NAN-checking base library. So add the rules to process
 # these files to get the plain Fortran files:
