--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -115,17 +115,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # Version 4.0.0 of flake8 crashes when processing the
-        # src/psyclone/tests/test_files/dynamo0p3 directory
-        # (see https://github.com/PyCQA/flake8/issues/1408).
-        pip install flake8==3.9.2 pytest pytest-cov pytest-xdist
         # Some of the examples use Jupyter
         pip install jupyter
         # If you wish to install the version of fparser pointed to by the
         # submodule instead of the released version (from PyPI) then
         # uncomment the following line:
         pip install external/fparser
-        pip install .
+        pip install .[test]
     - name: Lint with flake8
       run: |
         # Stop the build if there are Python syntax errors or undefined names.
