--- a/examples/lfric/eg19/Makefile
+++ b/examples/lfric/eg19/Makefile
@@ -32,6 +32,8 @@
 # POSSIBILITY OF SUCH DAMAGE.
 # ------------------------------------------------------------------------------
 # Author: R. W. Ford, STFC Daresbury Lab
+# Modified by J. Henrichs, Bureau of Meteorology
+
 
 include ../../common.mk
 
@@ -62,7 +64,6 @@ vanilla:
 
 $(EXEC): $(LFRIC_LIB) $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) -o $(EXEC) -L$(LFRIC_PATH) -l$(LFRIC_NAME)
-
 
 compile: transform $(EXEC)
 
