pr #1937. Added kernel files to lfric psyad example

--- a/examples/psyad/lfric/tangent_linear/Makefile
+++ b/examples/psyad/lfric/tangent_linear/Makefile
@@ -68,6 +68,17 @@ transform:
 	make single -e TL_KERNEL_NAME=tl_poly_advective_kernel ACTIVE_VAR_LIST="advective u v dtdx dtdy tracer wind"
 	make single -e TL_KERNEL_NAME=combine_w2_field_kernel ACTIVE_VAR_LIST="uvw w uv"
 	make single -e TL_KERNEL_NAME=split_w2_field_kernel ACTIVE_VAR_LIST="uvw w uv"
+	make single -e TL_KERNEL_NAME=sample_flux_kernel ACTIVE_VAR_LIST="flux u"
+	make single -e TL_KERNEL_NAME=weighted_div_kernel ACTIVE_VAR_LIST="div div_theta_v theta_quad res_dot_product grad_theta_quad theta_e theta"
+	make single -e TL_KERNEL_NAME=weighted_proj_2theta_kernel ACTIVE_VAR_LIST="projection exner integrand exner_quad exner_e"
+	make single -e TL_KERNEL_NAME=weighted_proj_theta2_kernel ACTIVE_VAR_LIST="theta theta_e theta_at_quad i1 projection"
+	make single -e TL_KERNEL_NAME=weighted_div_bd_kernel ACTIVE_VAR_LIST="div integrand next_bd_term this_bd_term theta_next_at_fquad theta_at_fquad theta_next_e theta_e theta"
+	make single -e TL_KERNEL_NAME=weighted_proj_2theta_bd_kernel ACTIVE_VAR_LIST="projection integrand exner_av exner_at_fquad exner_next_at_fquad exner_next_e exner_e exner"
+	make single -e TL_KERNEL_NAME=helmholtz_operator_kernel ACTIVE_VAR_LIST="helm_c f_op helm_dd helm_uu helm_d helm_u helm_s helm_n helm_w helm_e d_op ec_op m3_exner_star p3theta compound_div"
+	make single -e TL_KERNEL_NAME=tracer_viscosity_kernel ACTIVE_VAR_LIST="theta_inc viscosity_mu"
+	make single -e TL_KERNEL_NAME=dg_matrix_vector_kernel_mod ACTIVE_VAR_LIST="lhs lhs_e x x_e"
+	make single -e TL_KERNEL_NAME=w2_to_w1_projection_kernel_mod ACTIVE_VAR_LIST="v_w1 u_w2 vu res_dot_product wind"
+	make single -e TL_KERNEL_NAME=strong_curl_kernel ACTIVE_VAR_LIST="xi res_dot_product curl_u u"
 
 compile:
 	@echo No compilation supported.
