pr #1937. More completed adjoint kernels and updated Makefiles

--- a/examples/psyad/lfric/tangent_linear_tweaked/Makefile
+++ b/examples/psyad/lfric/tangent_linear_tweaked/Makefile
@@ -67,7 +67,7 @@ transform:
 	make single -e TL_KERNEL_NAME=tl_calc_exner_pointwise ACTIVE_VAR_LIST="exner rho theta"
 	make single -e TL_KERNEL_NAME=tl_project_eos_pressure_kernel ACTIVE_VAR_LIST="exner_at_quad r_exner exner_e exner rho_at_quad rho_e rho tmp_exner theta_vd_at_quad theta_vd_e theta moist_dyn_gas"
 	make single -e TL_KERNEL_NAME=eliminated_theta_q22_kernel ACTIVE_VAR_LIST="q22_op grad_term grad_exner exner tmp_result2"
-	make single -e TL_KERNEL_NAME=operator_setval_x_kernel ACTIVE_VAR_LIST="a x y"
+	make single -e TL_KERNEL_NAME=operator_setval_x_kernel ACTIVE_VAR_LIST="x y"
 	make single -e TL_KERNEL_NAME=mg_derham_mat_kernel ACTIVE_VAR_LIST="mm2 integrand div wt mmt mm3 wqp_v"
 	make single -e TL_KERNEL_NAME=poly2d_w3_reconstruction_kernel ACTIVE_VAR_LIST="reconstruction polynomial_tracer tracer"
 	make single -e TL_KERNEL_NAME=tl_sample_eos_pressure_kernel ACTIVE_VAR_LIST="exner rho_cell rho_e rho tmp_exner theta_vd_cell theta_vd_e theta moist_dyn_gas"
