#1991 Make the ModuleManager work with search directories instead of a list of all files.

--- a/examples/lfric/eg17/full_example_extract/Makefile
+++ b/examples/lfric/eg17/full_example_extract/Makefile
@@ -128,7 +128,9 @@ driver-main-init:	driver-main-init.o
 main_alg.f90: main_psy.f90
 
 %_psy.f90:	%.x90
-	${PSYCLONE} -s ./extract_transform.py \
+	${PSYCLONE} -s ./extract_transform.py      \
+	-d . -d ../../../../lib/extract/netcdf     \
+	-d ../../../../src/psyclone/tests/test_files/dynamo0p3/infrastructure \
 	-nodm -opsy $*_psy.f90 -oalg $*_alg.f90 $<
 
 allclean: clean
