--- a/lib/extract/netcdf/Makefile
+++ b/lib/extract/netcdf/Makefile
@@ -53,7 +53,7 @@ F90FLAGS += $$(nf-config --fflags)
 
 # The extract library is implemented for int, real and
 # double scalars and 1- to 4-dimensional arrays
-PROCESS_ARGS = -prefix=extract_ -types=int,logical,real,double \
+PROCESS_ARGS = -prefix=extract_ -types=int,long,logical,real,double \
 		       -dims=1,2,3,4
 PROCESS = $$($(PSYDATA_LIB_DIR)/get_python.sh) $(PSYDATA_LIB_DIR)/process.py
 
@@ -66,6 +66,7 @@ process: extract_netcdf_base.f90
 all:
 	$(MAKE) -C dl_esm_inf
 	$(MAKE) -C lfric
+	$(MAKE) -C nemo
 
 # The dependencies
 # ----------------
